POWR-795 add permissions to project that were missed

--- a/web/sites/default/config/group.role.project-admin.yml
+++ b/web/sites/default/config/group.role.project-admin.yml
@@ -36,67 +36,69 @@ permissions:
   21: 'view unpublished group_node:city_service entity'
   22: 'create group_node:city_service content'
   23: 'view group_node:city_service content'
-  28: 'view group_node:guide entity'
-  36: 'view group_node:information entity'
-  40: 'delete any group_node:event entity'
-  41: 'delete own group_node:event entity'
-  42: 'update any group_node:event entity'
-  43: 'update own group_node:event entity'
-  44: 'view group_node:event entity'
-  45: 'view unpublished group_node:event entity'
-  46: 'create group_node:event content'
-  47: 'view group_node:event content'
-  48: 'create group_node:notification entity'
-  49: 'delete any group_node:notification entity'
-  50: 'delete own group_node:notification entity'
-  51: 'update any group_node:notification entity'
-  52: 'update own group_node:notification entity'
-  53: 'view group_node:notification entity'
-  54: 'view unpublished group_node:notification entity'
-  55: 'create group_node:notification content'
-  56: 'view group_node:notification content'
-  57: 'create group_media:audio entity'
-  58: 'delete any group_media:audio entity'
-  59: 'delete own group_media:audio entity'
-  60: 'update any group_media:audio entity'
-  61: 'update own group_media:audio entity'
-  62: 'view group_media:audio entity'
-  63: 'view unpublished group_media:audio entity'
-  64: 'create group_media:audio content'
-  65: 'create group_media:document entity'
-  66: 'delete any group_media:document entity'
-  67: 'delete own group_media:document entity'
-  68: 'update any group_media:document entity'
-  69: 'update own group_media:document entity'
-  70: 'view group_media:document entity'
-  71: 'view unpublished group_media:document entity'
-  72: 'create group_media:document content'
-  73: 'create group_media:image entity'
-  74: 'delete any group_media:image entity'
-  75: 'delete own group_media:image entity'
-  76: 'update any group_media:image entity'
-  77: 'update own group_media:image entity'
-  78: 'view group_media:image entity'
-  79: 'view unpublished group_media:image entity'
-  80: 'create group_media:video entity'
-  81: 'delete any group_media:video entity'
-  82: 'delete own group_media:video entity'
-  83: 'update any group_media:video entity'
-  84: 'update own group_media:video entity'
-  85: 'view group_media:video entity'
-  86: 'view unpublished group_media:video entity'
-  87: 'create group_media:video content'
-  88: 'access group_media overview'
-  89: 'view group_media:document content'
-  90: 'create group_media:image content'
-  91: 'view group_media:image content'
-  92: 'view group_media:video content'
-  163: 'create group_node:page entity'
-  164: 'delete any group_node:page entity'
-  165: 'delete own group_node:page entity'
-  166: 'update any group_node:page entity'
-  167: 'update own group_node:page entity'
-  168: 'view group_node:page entity'
-  169: 'view unpublished group_node:page entity'
-  170: 'create group_node:page content'
-  171: 'view group_node:page content'
+  24: 'view group_node:guide entity'
+  25: 'view group_node:information entity'
+  26: 'delete any group_node:event entity'
+  27: 'delete own group_node:event entity'
+  28: 'update any group_node:event entity'
+  29: 'update own group_node:event entity'
+  30: 'view group_node:event entity'
+  31: 'view unpublished group_node:event entity'
+  32: 'create group_node:event content'
+  33: 'view group_node:event content'
+  34: 'create group_node:notification entity'
+  35: 'delete any group_node:notification entity'
+  36: 'delete own group_node:notification entity'
+  37: 'update any group_node:notification entity'
+  38: 'update own group_node:notification entity'
+  39: 'view group_node:notification entity'
+  40: 'view unpublished group_node:notification entity'
+  41: 'create group_node:notification content'
+  42: 'view group_node:notification content'
+  43: 'create group_media:audio entity'
+  44: 'delete any group_media:audio entity'
+  45: 'delete own group_media:audio entity'
+  46: 'update any group_media:audio entity'
+  47: 'update own group_media:audio entity'
+  48: 'view group_media:audio entity'
+  49: 'view unpublished group_media:audio entity'
+  50: 'create group_media:audio content'
+  51: 'create group_media:document entity'
+  52: 'delete any group_media:document entity'
+  53: 'delete own group_media:document entity'
+  54: 'update any group_media:document entity'
+  55: 'update own group_media:document entity'
+  56: 'view group_media:document entity'
+  57: 'view unpublished group_media:document entity'
+  58: 'create group_media:document content'
+  59: 'create group_media:image entity'
+  60: 'delete any group_media:image entity'
+  61: 'delete own group_media:image entity'
+  62: 'update any group_media:image entity'
+  63: 'update own group_media:image entity'
+  64: 'view group_media:image entity'
+  65: 'view unpublished group_media:image entity'
+  66: 'create group_media:video entity'
+  67: 'delete any group_media:video entity'
+  68: 'delete own group_media:video entity'
+  69: 'update any group_media:video entity'
+  70: 'update own group_media:video entity'
+  71: 'view group_media:video entity'
+  72: 'view unpublished group_media:video entity'
+  73: 'create group_media:video content'
+  74: 'access group_media overview'
+  75: 'view group_media:document content'
+  76: 'create group_media:image content'
+  77: 'view group_media:image content'
+  78: 'view group_media:video content'
+  79: 'create group_node:page entity'
+  80: 'delete any group_node:page entity'
+  81: 'delete own group_node:page entity'
+  82: 'update any group_node:page entity'
+  83: 'update own group_node:page entity'
+  84: 'view group_node:page entity'
+  85: 'view unpublished group_node:page entity'
+  86: 'create group_node:page content'
+  87: 'view group_node:page content'
+  131: 'create group_node:event entity'
+  142: 'create group_node:news entity'
