--- a/web/sites/default/config/group.role.project-member.yml
+++ b/web/sites/default/config/group.role.project-member.yml
@@ -25,48 +25,50 @@ permissions:
   10: 'update own group_node:city_service entity'
   11: 'view group_node:city_service entity'
   12: 'view unpublished group_node:city_service entity'
-  16: 'view group_node:guide entity'
-  21: 'view group_node:information entity'
-  23: 'delete own group_node:event entity'
-  24: 'update any group_node:event entity'
-  25: 'update own group_node:event entity'
-  26: 'view group_node:event entity'
-  27: 'view unpublished group_node:event entity'
-  28: 'create group_node:notification entity'
-  29: 'delete own group_node:notification entity'
-  30: 'update any group_node:notification entity'
-  31: 'update own group_node:notification entity'
-  32: 'view group_node:notification entity'
-  33: 'view unpublished group_node:notification entity'
-  34: 'create group_media:audio entity'
-  35: 'delete own group_media:audio entity'
-  36: 'update any group_media:audio entity'
-  37: 'update own group_media:audio entity'
-  38: 'view group_media:audio entity'
-  39: 'view unpublished group_media:audio entity'
-  40: 'create group_media:document entity'
-  41: 'delete own group_media:document entity'
-  42: 'update any group_media:document entity'
-  43: 'update own group_media:document entity'
-  44: 'view group_media:document entity'
-  45: 'view unpublished group_media:document entity'
-  46: 'create group_media:image entity'
-  47: 'delete own group_media:image entity'
-  48: 'update any group_media:image entity'
-  49: 'update own group_media:image entity'
-  50: 'view group_media:image entity'
-  51: 'view unpublished group_media:image entity'
-  52: 'create group_media:video entity'
-  53: 'delete own group_media:video entity'
-  54: 'update any group_media:video entity'
-  55: 'update own group_media:video entity'
-  56: 'view group_media:video entity'
-  57: 'view unpublished group_media:video entity'
-  58: 'access group_media overview'
-  59: 'access group_node overview'
-  106: 'create group_node:page entity'
-  107: 'delete own group_node:page entity'
-  108: 'update any group_node:page entity'
-  109: 'update own group_node:page entity'
-  110: 'view group_node:page entity'
-  111: 'view unpublished group_node:page entity'
+  13: 'view group_node:guide entity'
+  14: 'view group_node:information entity'
+  15: 'delete own group_node:event entity'
+  16: 'update any group_node:event entity'
+  17: 'update own group_node:event entity'
+  18: 'view group_node:event entity'
+  19: 'view unpublished group_node:event entity'
+  20: 'create group_node:notification entity'
+  21: 'delete own group_node:notification entity'
+  22: 'update any group_node:notification entity'
+  23: 'update own group_node:notification entity'
+  24: 'view group_node:notification entity'
+  25: 'view unpublished group_node:notification entity'
+  26: 'create group_media:audio entity'
+  27: 'delete own group_media:audio entity'
+  28: 'update any group_media:audio entity'
+  29: 'update own group_media:audio entity'
+  30: 'view group_media:audio entity'
+  31: 'view unpublished group_media:audio entity'
+  32: 'create group_media:document entity'
+  33: 'delete own group_media:document entity'
+  34: 'update any group_media:document entity'
+  35: 'update own group_media:document entity'
+  36: 'view group_media:document entity'
+  37: 'view unpublished group_media:document entity'
+  38: 'create group_media:image entity'
+  39: 'delete own group_media:image entity'
+  40: 'update any group_media:image entity'
+  41: 'update own group_media:image entity'
+  42: 'view group_media:image entity'
+  43: 'view unpublished group_media:image entity'
+  44: 'create group_media:video entity'
+  45: 'delete own group_media:video entity'
+  46: 'update any group_media:video entity'
+  47: 'update own group_media:video entity'
+  48: 'view group_media:video entity'
+  49: 'view unpublished group_media:video entity'
+  50: 'access group_media overview'
+  51: 'access group_node overview'
+  52: 'create group_node:page entity'
+  53: 'delete own group_node:page entity'
+  54: 'update any group_node:page entity'
+  55: 'update own group_node:page entity'
+  56: 'view group_node:page entity'
+  57: 'view unpublished group_node:page entity'
+  86: 'create group_node:event entity'
+  94: 'create group_node:news entity'
