POWR-760 Allow media items to be created in content edit form

--- a/web/sites/default/config/entity_browser.browser.document_browser_embed.yml
+++ b/web/sites/default/config/entity_browser.browser.document_browser_embed.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.media
   module:
+    - entity_browser_entity_form
     - views
 name: document_browser_embed
 label: 'Document browser (embed)'
@@ -16,7 +17,7 @@ display_configuration:
   auto_open: true
 selection_display: no_display
 selection_display_configuration: {  }
-widget_selector: single
+widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
   46fbcd32-d243-4a6f-a572-2cc6f616a92b:
@@ -29,3 +30,13 @@ widgets:
     weight: 1
     label: 'View documents'
     id: view
+  05594a98-42b3-4f76-ad21-2c0469683aae:
+    settings:
+      entity_type: media
+      bundle: document
+      form_mode: default
+      submit_text: 'Save document'
+    uuid: 05594a98-42b3-4f76-ad21-2c0469683aae
+    weight: 2
+    label: 'Add document'
+    id: entity_form
