--- a/web/sites/default/config/entity_browser.browser.image_browser_embed.yml
+++ b/web/sites/default/config/entity_browser.browser.image_browser_embed.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.media
   module:
+    - entity_browser_entity_form
     - views
 name: image_browser_embed
 label: 'Image browser (embed)'
@@ -16,7 +17,7 @@ display_configuration:
   auto_open: true
 selection_display: no_display
 selection_display_configuration: {  }
-widget_selector: single
+widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
   589097e1-a457-4d19-bf4e-fcde33ddc9a8:
@@ -29,3 +30,13 @@ widgets:
     weight: 1
     label: 'View images'
     id: view
+  b40f7ccd-84e0-45f7-982f-ea10249976cc:
+    settings:
+      entity_type: media
+      bundle: image
+      form_mode: default
+      submit_text: 'Save image'
+    uuid: b40f7ccd-84e0-45f7-982f-ea10249976cc
+    weight: 2
+    label: 'Add image'
+    id: entity_form
