--- a/web/sites/default/config/entity_browser.browser.audio_video_browser_embed.yml
+++ b/web/sites/default/config/entity_browser.browser.audio_video_browser_embed.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - views.view.media
   module:
+    - entity_browser_entity_form
     - views
 name: audio_video_browser_embed
 label: 'Audio/video browser (embed)'
@@ -16,7 +17,7 @@ display_configuration:
   auto_open: true
 selection_display: no_display
 selection_display_configuration: {  }
-widget_selector: single
+widget_selector: tabs
 widget_selector_configuration: {  }
 widgets:
   8443123d-ee1d-4ac2-8faf-2351958c52ef:
@@ -29,3 +30,23 @@ widgets:
     weight: 1
     label: 'View audio/video'
     id: view
+  65d84290-1c1d-4bc0-adc4-072a3e64383b:
+    settings:
+      entity_type: media
+      bundle: video
+      form_mode: default
+      submit_text: 'Save video'
+    uuid: 65d84290-1c1d-4bc0-adc4-072a3e64383b
+    weight: 2
+    label: 'Add video'
+    id: entity_form
+  4ec56337-c8e3-4315-9eeb-42e677017f17:
+    settings:
+      entity_type: media
+      bundle: audio
+      form_mode: default
+      submit_text: 'Save audio'
+    uuid: 4ec56337-c8e3-4315-9eeb-42e677017f17
+    weight: 3
+    label: 'Add audio'
+    id: entity_form
