--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -24,62 +24,62 @@ filters:
     id: htmlpurifier
     provider: htmlpurifier
     status: false
-    weight: -45
+    weight: -44
     settings:
       htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n    i: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n  RemoveEmpty.Predicate:\r\n    iframe:\r\n      - src\r\n    i:\r\n      - class\r\nHTML:\r\n  SafeIframe: true\r\nURI:\r\n  DisableExternalResources: false\r\n  SafeIframeRegexp: '%^(https?:)?(\\/\\/www\\.youtube\\.com\\/embed\\/|player\\.vimeo\\.com/video/)%'\r\n"
   entity_embed:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: -46
+    weight: -45
     settings: {  }
   editor_file_reference:
     id: editor_file_reference
     provider: editor
     status: false
-    weight: -43
+    weight: -42
     settings: {  }
   filter_align:
     id: filter_align
     provider: filter
     status: true
-    weight: -48
+    weight: -47
     settings: {  }
   filter_autop:
     id: filter_autop
     provider: filter
     status: false
-    weight: -42
+    weight: -41
     settings: {  }
   filter_caption:
     id: filter_caption
     provider: filter
     status: true
-    weight: -47
+    weight: -46
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
     provider: filter
     status: false
-    weight: -39
+    weight: -38
     settings: {  }
   filter_html_escape:
     id: filter_html_escape
     provider: filter
     status: false
-    weight: -44
+    weight: -43
     settings: {  }
   filter_html_image_secure:
     id: filter_html_image_secure
     provider: filter
     status: false
-    weight: -40
+    weight: -39
     settings: {  }
   filter_url:
     id: filter_url
     provider: filter
     status: false
-    weight: -41
+    weight: -40
     settings:
       filter_url_length: 72
   portland_media_embed_helper_filter:
@@ -87,4 +87,10 @@ filters:
     provider: portland_media_embed_helper
     status: true
     weight: -49
+    settings: {  }
+  portland_media_embed_helper_auto_mode_filter:
+    id: portland_media_embed_helper_auto_mode_filter
+    provider: portland_media_embed_helper
+    status: true
+    weight: -48
     settings: {  }
