POWR-277 Add geofield module

--- a/composer.json
+++ b/composer.json
@@ -56,6 +56,7 @@
         "drupal/field_group": "^3.0",
         "drupal/field_permissions": "^1.0@RC",
         "drupal/fixed_block_content": "^1.0",
+        "drupal/geofield": "^1.1",
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
         "drupal/groupmedia": "^2.0",
