--- a/web/themes/custom/cloudy/cloudy.info.yml
+++ b/web/themes/custom/cloudy/cloudy.info.yml
@@ -8,15 +8,11 @@ base theme: classy
 libraries:
   - cloudy/global-styling
 
-ckeditor_stylesheets:
-  - css/style.css
-  - //use.fontawesome.com/releases/v5.2.0/css/all.css
-
 stylesheets-remove:
   - '@extlink/extlink.css'
 
 ckeditor_stylesheets:
-  - css/style.css
+  - css/style.bundle.css
   - https://use.fontawesome.com/releases/v5.2.0/css/all.css
 
 regions:
