--- a/web/themes/custom/cloudy/package.json
+++ b/web/themes/custom/cloudy/package.json
@@ -15,7 +15,9 @@
   ],
   "author": "@joshuami",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "bootstrap4-chosen": "^1.0.0-alpha.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.1.5",
     "babel-loader": "^8.0.4",
