POWR-742 Add body content field. Remove action link, summary fields.

--- a/web/sites/default/config/core.entity_view_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.alert.default.yml
@@ -3,14 +3,13 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.alert.field_action_link
+    - field.field.node.alert.field_body_content
     - field.field.node.alert.field_severity
-    - field.field.node.alert.field_summary
     - node.type.alert
   module:
-    - link
     - options
     - panelizer
+    - text
     - user
 third_party_settings:
   panelizer:
@@ -23,17 +22,12 @@ targetEntityType: node
 bundle: alert
 mode: default
 content:
-  field_action_link:
-    weight: 2
+  field_body_content:
+    weight: 1
     label: above
-    settings:
-      trim_length: 80
-      url_only: false
-      url_plain: false
-      rel: ''
-      target: ''
+    settings: {  }
     third_party_settings: {  }
-    type: link
+    type: text_default
     region: content
   field_severity:
     weight: 0
@@ -41,14 +35,6 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: list_default
-    region: content
-  field_summary:
-    weight: 1
-    label: above
-    settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
     region: content
 hidden:
   content_moderation_control: true
