--- a/web/sites/default/config/core.entity_form_display.node.alert.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.alert.default.yml
@@ -3,14 +3,15 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.field.node.alert.field_action_link
+    - field.field.node.alert.field_body_content
     - field.field.node.alert.field_severity
-    - field.field.node.alert.field_summary
     - node.type.alert
   module:
+    - allowed_formats
     - content_moderation
-    - link
+    - maxlength
     - path
+    - text
 id: node.alert.default
 targetEntityType: node
 bundle: alert
@@ -22,32 +23,27 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_action_link:
-    weight: 26
+  field_body_content:
+    weight: 2
     settings:
-      placeholder_url: ''
-      placeholder_title: ''
-    third_party_settings: {  }
-    type: link_default
+      rows: 5
+      placeholder: ''
+    third_party_settings:
+      maxlength:
+        maxlength_js: 200
+        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
+        maxlength_js_enforce: false
+        maxlength_js_truncate_html: false
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
+    type: text_textarea
     region: content
   field_severity:
     weight: 1
     settings: {  }
     third_party_settings: {  }
     type: options_select
-    region: content
-  field_summary:
-    weight: 2
-    settings:
-      rows: 2
-      placeholder: ''
-    third_party_settings:
-      maxlength:
-        maxlength_js: 300
-        maxlength_js_label: 'Content limited to @limit characters, remaining: <strong>@remaining</strong>'
-        maxlength_js_enforce: true
-        maxlength_js_truncate_html: true
-    type: string_textarea
     region: content
   moderation_state:
     type: moderation_state_default
