--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "require": {
-        "acquia/lightning": "3.2.5",
+        "acquia/lightning": "^3.2",
         "bower-asset/cropper": "^2.3",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
@@ -46,7 +46,6 @@
         "drupal/console": "^1.0.2",
         "drupal/content_lock": "^1.0@alpha",
         "drupal/copyright_block": "^1.0@RC",
-        "drupal/core": "^8.6.7",
         "drupal/custom_add_another": "^1.0@beta",
         "drupal/ds": "^3.1",
         "drupal/easy_breadcrumb": "^1.8",
@@ -59,7 +58,7 @@
         "drupal/fixed_block_content": "^1.0",
         "drupal/google_analytics": "^2.3",
         "drupal/group": "^1.0",
-        "drupal/groupmedia": "^2.0@alpha",
+        "drupal/groupmedia": "^2.0",
         "drupal/hsts": "^1.0",
         "drupal/htmlpurifier": "^1.0@RC",
         "drupal/inline_entity_form": "^1.0@RC",
@@ -90,7 +89,7 @@
         "drupal/views_bulk_operations": "^2.2",
         "drupal/views_data_export": "^1.0@beta",
         "drupal/viewsreference": "^1.2",
-        "drupal/webform": "^5.0@RC",
+        "drupal/webform": "^5.1",
         "drush/drush": "^9.5.0",
         "roave/security-advisories": "dev-master",
         "webflo/drupal-finder": "^1.0.0",
