--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -23,6 +23,7 @@ permissions:
   - 'access user profiles'
   - 'access video_browser entity browser pages'
   - 'break content lock'
+  - 'create media'
   - 'revert city_service revisions'
   - 'revert event revisions'
   - 'revert guide revisions'
