POWR-772 temporarily disable new custom filter

--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -82,15 +82,15 @@ filters:
     weight: -40
     settings:
       filter_url_length: 72
-  portland_media_embed_helper_auto_mode_filter:
-    id: portland_media_embed_helper_auto_mode_filter
-    provider: portland_media_embed_helper
-    status: true
-    weight: -48
-    settings: {  }
   portland_media_embed_helper_filter:
     id: portland_media_embed_helper_filter
     provider: portland_media_embed_helper
     status: true
     weight: -49
+    settings: {  }
+  portland_media_embed_helper_auto_mode_filter:
+    id: portland_media_embed_helper_auto_mode_filter
+    provider: portland_media_embed_helper
+    status: false
+    weight: -48
     settings: {  }
