POWR-760 Fix datepicker width

--- a/web/sites/default/config/system.site.yml
+++ b/web/sites/default/config/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 191eddb9-0929-4dbd-bbfa-3f97bf1d93e0
 name: Portland.gov
 mail: powr@portlandoregon.gov
-slogan: 'POWR-767 The official website of the City of Portland, Oregon.'
+slogan: 'The official website of the City of Portland, Oregon.'
 page:
   403: ''
   404: /system/404
