--- a/web/sites/default/config/views.view.admin_content_services.yml
+++ b/web/sites/default/config/views.view.admin_content_services.yml
@@ -1474,6 +1474,7 @@ display:
       tags:
         - 'config:field.storage.paragraph.field_service_modes'
         - 'config:workflow_list'
+        - extensions
   page_2:
     display_options:
       path: admin/content/services
@@ -1774,7 +1775,7 @@ display:
           exposed: true
           expose:
             operator_id: topic_op
-            label: ''
+            label: Topic
             description: ''
             use_operator: true
             operator: ''
@@ -1786,6 +1787,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              sitewide_editor: '0'
             reduce: false
           is_grouped: false
           group_info:
