POWR-772a - enable new custom filter, re-enable dev config split

--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -86,5 +86,11 @@ filters:
     id: portland_media_embed_helper_filter
     provider: portland_media_embed_helper
     status: true
+    weight: -48
+    settings: {  }
+  portland_media_embed_helper_auto_mode_filter:
+    id: portland_media_embed_helper_auto_mode_filter
+    provider: portland_media_embed_helper
+    status: true
     weight: -49
     settings: {  }
