POWR-803 fix the config import conflict

--- a/web/sites/default/config/views.view.locked_content.yml
+++ b/web/sites/default/config/views.view.locked_content.yml
@@ -188,7 +188,7 @@ display:
           batch_size: 10
           form_step: true
           buttons: false
-          clear_on_exposed: 0
+          clear_on_exposed: false
           action_title: Action
           selected_actions:
             'entity:break_lock:node': 'entity:break_lock:node'
