--- a/web/sites/default/config/filter.format.rich_text.yml
+++ b/web/sites/default/config/filter.format.rich_text.yml
@@ -5,6 +5,7 @@ dependencies:
   module:
     - editor
     - entity_embed
+    - portland_media_embed_helper
 _core:
   default_config_hash: Mc8Hl-Ya14lrbMXaUx7Ybmv-18vtqE4lw2DpgNHPj-s
 name: 'Rich Text'
@@ -15,31 +16,31 @@ filters:
     id: filter_align
     provider: filter
     status: true
-    weight: -48
+    weight: -47
     settings: {  }
   filter_caption:
     id: filter_caption
     provider: filter
     status: true
-    weight: -47
+    weight: -46
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
     provider: filter
     status: true
-    weight: -46
+    weight: -45
     settings: {  }
   editor_file_reference:
     id: editor_file_reference
     provider: editor
     status: true
-    weight: -45
+    weight: -44
     settings: {  }
   entity_embed:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: -49
+    weight: -48
     settings: {  }
   filter_html:
     id: filter_html
@@ -54,24 +55,36 @@ filters:
     id: filter_autop
     provider: filter
     status: false
-    weight: -43
+    weight: -42
     settings: {  }
   filter_html_escape:
     id: filter_html_escape
     provider: filter
     status: false
-    weight: -44
+    weight: -43
     settings: {  }
   filter_html_image_secure:
     id: filter_html_image_secure
     provider: filter
     status: false
-    weight: -41
+    weight: -40
     settings: {  }
   filter_url:
     id: filter_url
     provider: filter
     status: false
-    weight: -42
+    weight: -41
     settings:
       filter_url_length: 72
+  portland_media_embed_helper_filter:
+    id: portland_media_embed_helper_filter
+    provider: portland_media_embed_helper
+    status: false
+    weight: -39
+    settings: {  }
+  portland_media_embed_html_filter:
+    id: portland_media_embed_html_filter
+    provider: portland_media_embed_helper
+    status: true
+    weight: -49
+    settings: {  }
