--- a/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
+++ b/web/sites/default/config/filter.format.simplified_editor_with_media_embed.yml
@@ -5,7 +5,6 @@ dependencies:
   module:
     - editor
     - entity_embed
-    - htmlpurifier
     - portland_media_embed_helper
 name: 'Simplified editor with media embed'
 format: simplified_editor_with_media_embed
@@ -20,18 +19,11 @@ filters:
       allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p class=""> <hr> <sup> <sub> <s> <img src alt data-entity-type data-entity-uuid> <a href hreflang !href accesskey id rel target title class=" btn-cta-outline"> <h1> <pre> <i class=""> <drupal-entity data-* title alt data-entity-type data-entity-uuid data-entity-embed-display data-entity-embed-display-settings data-align data-caption data-embed-button> <div class="">'
       filter_html_help: true
       filter_html_nofollow: false
-  htmlpurifier:
-    id: htmlpurifier
-    provider: htmlpurifier
-    status: false
-    weight: -45
-    settings:
-      htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n    i: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n  RemoveEmpty.Predicate:\r\n    iframe:\r\n      - src\r\n    i:\r\n      - class\r\nHTML:\r\n  SafeIframe: true\r\nURI:\r\n  DisableExternalResources: false\r\n  SafeIframeRegexp: '%^(https?:)?(\\/\\/www\\.youtube\\.com\\/embed\\/|player\\.vimeo\\.com/video/)%'\r\n"
   entity_embed:
     id: entity_embed
     provider: entity_embed
     status: true
-    weight: -46
+    weight: -45
     settings: {  }
   editor_file_reference:
     id: editor_file_reference
@@ -43,7 +35,7 @@ filters:
     id: filter_align
     provider: filter
     status: true
-    weight: -48
+    weight: -47
     settings: {  }
   filter_autop:
     id: filter_autop
@@ -55,7 +47,7 @@ filters:
     id: filter_caption
     provider: filter
     status: true
-    weight: -47
+    weight: -46
     settings: {  }
   filter_htmlcorrector:
     id: filter_htmlcorrector
@@ -84,6 +76,12 @@ filters:
       filter_url_length: 72
   portland_media_embed_helper_filter:
     id: portland_media_embed_helper_filter
+    provider: portland_media_embed_helper
+    status: true
+    weight: -48
+    settings: {  }
+  portland_media_embed_html_filter:
+    id: portland_media_embed_html_filter
     provider: portland_media_embed_helper
     status: true
     weight: -49
