--- a/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
+++ b/web/sites/default/config/core.entity_view_display.media.image.embedded.yml
@@ -4,12 +4,14 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.media.embedded
+    - field.field.media.image.field_group
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
+    - image.style.max_540w
     - media.type.image
-    - responsive_image.styles.paragraph_image
   module:
-    - responsive_image
+    - ds
+    - image
 _core:
   default_config_hash: FaHkkj9J9DxKQ-R7RNddSDq_d0D6UBY3hoKzoAQoGaw
 id: media.image.embedded
@@ -18,13 +20,20 @@ bundle: image
 mode: embedded
 content:
   image:
-    type: responsive_image
+    type: image
     weight: 0
     label: hidden
     settings:
-      responsive_image_style: paragraph_image
+      image_style: max_540w
       image_link: ''
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
 hidden:
   content_moderation_control: true
