POWR-277 Add leaflet_widget module

--- a/composer.json
+++ b/composer.json
@@ -64,6 +64,7 @@
         "drupal/htmlpurifier": "^1.0@RC",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/key": "^1.8",
+        "drupal/leaflet_widget": "^2.0@alpha",
         "drupal/link_class": "^1.3",
         "drupal/linkit": "^4.3",
         "drupal/maxlength": "^1.0",
