--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -65,7 +65,7 @@ metatag: 0.0.0
 node: 0.0.0
 openapi: 0.0.0
 openapi_ui: 0.0.0
-openapi_ui_swagger: '0'
+openapi_ui_swagger: "0"
 openapi_ui_redoc: 0.0.0
 options: 0.0.0
 page_cache: 0.0.0
@@ -184,3 +184,4 @@ seckit: 1.1.0
 remove_http_headers: 1.0.0-alpha3
 kint: 1.2.0
 content_lock_timeout: 1.0.0-alpha8
+geofield: 1.1.0
