--- a/web/sites/default/config/filter.format.simple_editor.yml
+++ b/web/sites/default/config/filter.format.simple_editor.yml
@@ -1,9 +1,7 @@
 uuid: 99add04c-724f-498e-bf4a-16e84ae450fc
 langcode: en
 status: true
-dependencies:
-  module:
-    - htmlpurifier
+dependencies: {  }
 name: 'Simplified Editor'
 format: simple_editor
 weight: 0
@@ -17,10 +15,3 @@ filters:
       allowed_html: '<em> <strong> <cite> <blockquote cite> <code> <ul type> <ol start type> <li> <dl> <dt> <dd> <h2 id> <h3 id> <h4 id> <h5 id> <h6 id> <p> <hr> <sup> <sub> <s> <a href hreflang !href accesskey id rel target title>'
       filter_html_help: true
       filter_html_nofollow: false
-  htmlpurifier:
-    id: htmlpurifier
-    provider: htmlpurifier
-    status: false
-    weight: 0
-    settings:
-      htmlpurifier_configuration: "AutoFormat:\r\n  RemoveEmpty.RemoveNbsp.Exceptions:\r\n    td: true\r\n    th: true\r\n  RemoveEmpty.RemoveNbsp: true\r\n  RemoveEmpty: true\r\n  RemoveSpansWithoutAttributes: false\r\n"
