--- a/web/sites/default/config/lightning_core.versions.yml
+++ b/web/sites/default/config/lightning_core.versions.yml
@@ -185,3 +185,5 @@ remove_http_headers: 1.0.0-alpha3
 kint: 1.2.0
 content_lock_timeout: 1.0.0-alpha8
 geofield: 1.1.0
+leaflet: 1.3.0
+leaflet_widget: 2.0.0-alpha1
