POWR-277 Use leaflet_widget for inputting geofield field

--- a/web/sites/default/config/core.entity_form_display.node.saved_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.saved_location.default.yml
@@ -7,7 +7,7 @@ dependencies:
     - node.type.saved_location
   module:
     - content_moderation
-    - geofield
+    - leaflet_widget
     - path
 id: node.saved_location.default
 targetEntityType: node
@@ -22,9 +22,33 @@ content:
     third_party_settings: {  }
   field_geometry:
     weight: 1
-    settings: {  }
+    settings:
+      map:
+        leaflet_map: 'OSM Mapnik'
+        height: '300'
+        center:
+          lat: '-122.6587'
+          lng: '45.5122'
+        auto_center: '1'
+        zoom: '10'
+        locate: '1'
+        scroll_zoom_enabled: '1'
+      input:
+        show: '1'
+        readonly: 0
+      toolbar:
+        position: topright
+        drawMarker: '1'
+        drawPolyline: '1'
+        drawRectangle: '1'
+        drawPolygon: '1'
+        drawCircle: '1'
+        editMode: '1'
+        dragMode: '1'
+        removalMode: '1'
+        cutPolygon: 0
     third_party_settings: {  }
-    type: geofield_bounds
+    type: leaflet_widget
     region: content
   moderation_state:
     type: moderation_state_default
