--- a/web/sites/default/config/core.extension.yml
+++ b/web/sites/default/config/core.extension.yml
@@ -120,6 +120,7 @@ module:
   pantheon_advanced_page_cache: 0
   path: 0
   portland: 0
+  portland_geofield: 0
   portland_legacy_redirects: 0
   portland_media_embed_helper: 0
   portland_revision_helper: 0
