POWR-277 Update CSP for using ArcGIS Javascript API

--- a/web/sites/default/config/seckit.settings.yml
+++ b/web/sites/default/config/seckit.settings.yml
@@ -3,18 +3,18 @@ seckit_xss:
     checkbox: true
     report-only: true
     default-src: '''self'''
-    script-src: '''self'' ''unsafe-inline'' ''unsafe-eval'' https://www.google-analytics.com https://unpkg.com https://cdn.jsdelivr.net'
+    script-src: '''self'' ''unsafe-inline'' ''unsafe-eval'' blob: https://www.google-analytics.com https://unpkg.com https://cdn.jsdelivr.net https://*.arcgis.com'
     object-src: ''
-    img-src: '''self'' https://www.google-analytics.com'
+    img-src: '''self'' https://www.google-analytics.com https://*.arcgis.com'
     media-src: ''
     frame-src: '''self'' https://www.youtube.com/embed/'
     frame-ancestors: ''
     child-src: ''
-    font-src: '''self'' https://fonts.gstatic.com https://themes.googleusercontent.com https://use.fontawesome.com'
-    connect-src: '''self'' https://www.google-analytics.com'
+    font-src: '''self'' https://fonts.gstatic.com https://themes.googleusercontent.com https://use.fontawesome.com https://*.arcgis.com'
+    connect-src: '''self'' https://www.google-analytics.com https://*.arcgis.com'
     report-uri: 'https://portlandgov.report-uri.com/r/d/csp/wizard'
     policy-uri: ''
-    style-src: '''self'' ''unsafe-inline'' https://fonts.googleapis.com/css https://use.fontawesome.com'
+    style-src: '''self'' ''unsafe-inline'' https://fonts.googleapis.com/css https://use.fontawesome.com https://*.arcgis.com'
   x_xss:
     seckit_x_xss_option_disable: Disabled
     seckit_x_xss_option_0: '0'
