POWR-277 Use custom geofield module for geofield widget

--- a/web/sites/default/config/core.entity_form_display.node.saved_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.saved_location.default.yml
@@ -7,8 +7,8 @@ dependencies:
     - node.type.saved_location
   module:
     - content_moderation
-    - geofield
     - path
+    - portland_geofield
 id: node.saved_location.default
 targetEntityType: node
 bundle: saved_location
@@ -22,9 +22,26 @@ content:
     third_party_settings: {  }
   field_geometry:
     weight: 1
-    settings: {  }
+    settings:
+      center:
+        lat: '45.523452'
+        lon: '-122.676207'
+      dimensions:
+        width: 100%
+        height: 30em
+      basemap: streets-vector
+      address_field:
+        field: '0'
+        hidden: false
+        disabled: true
+      show_wkt: 0
+      zoom:
+        min: 1
+        max: 20
+        focus: 12
+        start: 8
     third_party_settings: {  }
-    type: geofield_bounds
+    type: portland_geofield
     region: content
   moderation_state:
     type: moderation_state_default
