--- a/web/sites/default/config/views.view.content.yml
+++ b/web/sites/default/config/views.view.content.yml
@@ -4,6 +4,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_legacy_path
+    - field.storage.node.field_page_type
     - workflows.workflow.editorial
   module:
     - content_moderation
@@ -197,6 +198,69 @@ display:
           settings:
             link_to_entity: true
           plugin_id: field
+        field_page_type:
+          id: field_page_type
+          table: node__field_page_type
+          field: field_page_type
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: true
+          alter:
+            alter_text: true
+            text: ': {{ field_page_type }}'
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_label
+          settings:
+            link: false
+          group_column: target_id
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         type:
           id: type
           table: node_field_data
@@ -207,8 +271,8 @@ display:
           label: 'Content type'
           exclude: false
           alter:
-            alter_text: false
-            text: ''
+            alter_text: true
+            text: '{{ type }}{{ field_page_type }}'
             make_link: false
             path: ''
             absolute: false
@@ -693,12 +757,12 @@ display:
           group: 1
           exposed: true
           expose:
-            operator_id: label_op
+            operator_id: group_op
             label: 'Group title contains'
             description: ''
-            use_operator: false
+            use_operator: true
             operator: label_op
-            identifier: label
+            identifier: group
             required: false
             remember: false
             multiple: false
@@ -706,6 +770,7 @@ display:
               authenticated: authenticated
               anonymous: '0'
               administrator: '0'
+              sitewide_editor: '0'
             placeholder: ''
           is_grouped: false
           group_info:
@@ -748,10 +813,12 @@ display:
             'group_node:guide': 'group_node:guide'
             'group_node:information': 'group_node:information'
             'group_node:news': 'group_node:news'
+            'group_node:notification': 'group_node:notification'
+            'group_node:page': 'group_node:page'
             'group_node:alert': '0'
             'group_node:building': '0'
-            'group_node:notification': '0'
             'group_node:service_location': '0'
+            'group_node:top_search': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
         uid:
@@ -804,6 +871,7 @@ display:
       max-age: 0
       tags:
         - 'config:field.storage.node.field_legacy_path'
+        - 'config:field.storage.node.field_page_type'
         - 'config:workflow_list'
         - extensions
   page_1:
@@ -838,5 +906,6 @@ display:
       max-age: 0
       tags:
         - 'config:field.storage.node.field_legacy_path'
+        - 'config:field.storage.node.field_page_type'
         - 'config:workflow_list'
         - extensions
