--- a/web/modules/custom/portland_geofield/js/package.json
+++ b/web/modules/custom/portland_geofield/js/package.json
@@ -3,28 +3,37 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production --no-progress"
   },
   "dependencies": {
-    "arcgis-js-api": "^4.10.1",
     "axios": "^0.18.0",
     "esri-loader": "^2.3.0",
     "terraformer-arcgis-parser": "^1.0.5",
     "terraformer-wkt-parser": "^1.1.2",
-    "vue": "^2.6.6",
-    "vuex": "^3.0.1"
+    "tinycolor2": "^1.4.1",
+    "vue": "^2.6.8",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@arcgis/webpack-plugin": "^4.10.5",
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
-    "@vue/cli-service": "^3.0.4",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.8.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "@babel/core": "^7.1.5",
+    "autoprefixer": "^9.4.9",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "cross-env": "^5.0.5",
+    "css-loader": "^2.1.0",
+    "file-loader": "^3.0.1",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.5.3",
+    "postcss": "^7.0.14",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.20.3",
+    "vue-loader": "^15.7.0",
+    "vue-template-compiler": "^2.6.8",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.1",
+    "webpack-dev-server": "^3.2.1"
   }
 }
