POWR-791 - hide page title and feedback link on entity browsers

--- a/web/sites/default/config/block.block.cloudy_page_title.yml
+++ b/web/sites/default/config/block.block.cloudy_page_title.yml
@@ -2,6 +2,8 @@ uuid: 533a9264-0fa2-4e1f-8dcf-3d7a284eafac
 langcode: en
 status: true
 dependencies:
+  module:
+    - system
   theme:
     - cloudy
 _core:
@@ -17,4 +19,9 @@ settings:
   label: 'Page title'
   provider: core
   label_display: '0'
-visibility: {  }
+visibility:
+  request_path:
+    id: request_path
+    pages: '/entity-browser/*'
+    negate: true
+    context_mapping: {  }
