--- a/web/sites/default/config/block.block.feedbacklink.yml
+++ b/web/sites/default/config/block.block.feedbacklink.yml
@@ -26,6 +26,6 @@ settings:
 visibility:
   request_path:
     id: request_path
-    pages: "/feedback\r\n/thank-you-for-feedback\r\n/user/login\r\n/user/password"
+    pages: "/feedback\r\n/thank-you-for-feedback\r\n/user/login\r\n/user/password\r\n/entity-browser/*"
     negate: true
     context_mapping: {  }
