--- a/web/sites/default/config/core.entity_form_display.node.saved_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.saved_location.default.yml
@@ -7,7 +7,7 @@ dependencies:
     - node.type.saved_location
   module:
     - content_moderation
-    - geofield
+    - geofield_map
     - path
 id: node.saved_location.default
 targetEntityType: node
@@ -22,9 +22,37 @@ content:
     third_party_settings: {  }
   field_geometry:
     weight: 1
-    settings: {  }
+    settings:
+      map_google_places:
+        places_additional_options: ''
+        places_control: false
+      map_library: leaflet
+      map_type_google: roadmap
+      map_type_leaflet: OpenStreetMap_Mapnik
+      map_type_selector: '1'
+      map_dimensions:
+        width: 100%
+        height: 450px
+      zoom:
+        start: '6'
+        focus: '12'
+        min: '0'
+        max: '22'
+      geoaddress_field:
+        field: '0'
+        disabled: '1'
+        hidden: 0
+      html5_geolocation: '1'
+      default_value:
+        lat: '0'
+        lon: '0'
+      click_to_find_marker: 0
+      click_to_place_marker: 0
+      hide_coordinates: 0
+      map_google_api_key: ''
+      zoom_level: 5
     third_party_settings: {  }
-    type: geofield_bounds
+    type: geofield_map
     region: content
   moderation_state:
     type: moderation_state_default
