POWR-791 - Media entity browsres: renamed User contextual filter, removed page size input, made sure reset button on all browsres, renamed image browser

--- a/web/sites/default/config/views.view.media.yml
+++ b/web/sites/default/config/views.view.media.yml
@@ -6,7 +6,6 @@ dependencies:
     - field.storage.media.field_document
     - image.style.medium
     - image.style.thumbnail
-    - media.type.image
   module:
     - entity_browser
     - file
@@ -1569,7 +1568,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: 'Author (autocomplete)'
+            label: Author
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -1627,7 +1626,7 @@ display:
             first: '« First'
             last: 'Last »'
           expose:
-            items_per_page: true
+            items_per_page: false
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
@@ -2453,7 +2452,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: 'Name (autocomplete)'
+            label: Name
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -2511,7 +2510,7 @@ display:
             first: '« First'
             last: 'Last »'
           expose:
-            items_per_page: true
+            items_per_page: false
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
@@ -3330,7 +3329,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: 'Name (autocomplete)'
+            label: Name
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -3388,7 +3387,7 @@ display:
             first: '« First'
             last: 'Last »'
           expose:
-            items_per_page: true
+            items_per_page: false
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
@@ -3498,7 +3497,7 @@ display:
   image_table_browser:
     display_plugin: entity_browser
     id: image_table_browser
-    display_title: 'Image table browser'
+    display_title: 'Image browser'
     position: 2
     display_options:
       display_extenders: {  }
@@ -4211,7 +4210,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: 'Author (autocomplete)'
+            label: Author
             description: 'Start typing to see a  list of matching names'
             use_operator: false
             operator: uid_op
@@ -4269,7 +4268,7 @@ display:
             first: '« First'
             last: 'Last »'
           expose:
-            items_per_page: true
+            items_per_page: false
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
@@ -5126,7 +5125,7 @@ display:
           exposed: true
           expose:
             operator_id: uid_op
-            label: 'Name (autocomplete)'
+            label: Name
             description: 'Start typing to see a list of matching names'
             use_operator: false
             operator: uid_op
@@ -5184,7 +5183,7 @@ display:
             first: '« First'
             last: 'Last »'
           expose:
-            items_per_page: true
+            items_per_page: false
             items_per_page_label: 'Items per page'
             items_per_page_options: '5, 10, 25, 50'
             items_per_page_options_all: false
