PWOR-800 Move secrets to new location.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,8 +175,10 @@ behat_tests: &behat_tests
               echo "Creating new multidev site. This may take a few seconds."
               terminus multidev:create portlandor.test $CIRCLE_BRANCH
               # Use environment varialbes to set the secrets and use terminus:rsync to copy the file.
-              echo $TEST_KEY > 'test.key'
-              terimnus rsync ./test.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:files/private/
+              cd /var/www/html/private
+              mkdir solr-config
+              echo $SENDGRID_API_KEY > sendgrid_api.key
+              terminus rsync ./private $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/
             fi
             # Set the connection type to GIT
             terminus connection:set portlandor.$CIRCLE_BRANCH git
