--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ web/modules/contrib/
 web/profiles/contrib/
 web/themes/contrib/
 web/vendor/
+private/
 
 # Avoid accidental modification of pantheon.upstream.yml in sites
 # created from this upstream
