--- a/web/sites/default/config/key.key.sendgrid_api.yml
+++ b/web/sites/default/config/key.key.sendgrid_api.yml
@@ -9,7 +9,7 @@ key_type: authentication
 key_type_settings: {  }
 key_provider: file
 key_provider_settings:
-  file_location: sites/default/files/private/sendgrid_api.key
+  file_location: ../private/sendgrid_api.key
   strip_line_breaks: false
 key_input: none
 key_input_settings: {  }
