--- a/web/sites/default/config/key.key.solr_password.yml
+++ b/web/sites/default/config/key.key.solr_password.yml
@@ -9,7 +9,7 @@ key_type: authentication
 key_type_settings: {  }
 key_provider: file
 key_provider_settings:
-  file_location: sites/default/files/private/solr_password.key
+  file_location: ../private/solr-config/solr_password.key
   strip_line_breaks: true
 key_input: none
 key_input_settings: {  }
