--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -176,9 +176,14 @@ behat_tests: &behat_tests
               terminus multidev:create portlandor.test $CIRCLE_BRANCH
               # Use environment varialbes to set the secrets and use terminus:rsync to copy the file.
               cd /var/www/html/private
-              mkdir solr-config
               echo $SENDGRID_API_KEY > sendgrid_api.key
-              terminus rsync ./private $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/
+              terminus rsync ./sendgrid_api.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:private/
+              mkdir solr-config
+              echo $SOLR_CORE > ./solr-config/solr_core.key
+              echo $SOLR_HOST > ./solr-config/solr_host.key
+              echo $SOLR_CSOLR_PASSWORDORE > ./solr-config/solr_password.key
+              echo $SOLR_USERNAME > ./solr-config/solr_username.key
+              terminus rsync ./solr-config/ $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:private/
             fi
             # Set the connection type to GIT
             terminus connection:set portlandor.$CIRCLE_BRANCH git
