--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ web/modules/contrib/
 web/profiles/contrib/
 web/themes/contrib/
 web/vendor/
-private/
+*.key
 
 # Avoid accidental modification of pantheon.upstream.yml in sites
 # created from this upstream
