--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -177,12 +177,12 @@ behat_tests: &behat_tests
               # Use environment varialbes to set the secrets and use terminus:rsync to copy the file.
               cd /var/www/html/private
               echo $SENDGRID_API_KEY > sendgrid_api.key
-              terminus rsync ./sendgrid_api.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:private/
+              terminus rsync ./sendgrid_api.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/
               echo $SOLR_CORE > ./solr-config/solr_core.key
               echo $SOLR_HOST > ./solr-config/solr_host.key
               echo $SOLR_CSOLR_PASSWORDORE > ./solr-config/solr_password.key
               echo $SOLR_USERNAME > ./solr-config/solr_username.key
-              terminus rsync ./solr-config/ $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:private/
+              terminus rsync ./solr-config $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/
             fi
             # Set the connection type to GIT
             terminus connection:set portlandor.$CIRCLE_BRANCH git
