POWR-800 Set connection mode to sftp

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,6 +175,7 @@ behat_tests: &behat_tests
               echo "Creating new multidev site. This may take a few seconds."
               terminus multidev:create portlandor.test $CIRCLE_BRANCH
               # Use environment varialbes to set the secrets and use terminus:rsync to copy the file.
+              terminus connection:set portlandor.dev sftp
               cd /var/www/html/private
               echo $SENDGRID_API_KEY > sendgrid_api.key
               terminus rsync ./sendgrid_api.key $CIRCLE_PROJECT_REPONAME.$CIRCLE_BRANCH:code/private/
