POWR-308 Configure Solr synonyms

--- a/web/sites/default/config/search_api.index.full_index.yml
+++ b/web/sites/default/config/search_api.index.full_index.yml
@@ -3,18 +3,18 @@ langcode: en
 status: true
 dependencies:
   module:
-    - group
-    - search_api_solr
     - node
     - taxonomy
+    - group
+    - search_api_solr
     - search_api
     - portland
   config:
+    - field.storage.node.field_body
     - field.storage.group.field_official_organization_name
     - field.storage.group.field_official_title
     - field.storage.group.field_shortname_or_acronym
     - field.storage.group.field_summary
-    - field.storage.node.field_body
     - field.storage.node.field_summary
     - search_api.server.searchstax
 id: full_index
@@ -254,92 +254,42 @@ processor_settings:
   add_url: {  }
   aggregated_field: {  }
   entity_status: {  }
+  html_filter:
+    all_fields: true
+    fields:
+      - description
+      - field_official_organization_name
+      - field_official_title
+      - field_shortname_or_acronym
+      - field_summary
+      - field_summary_1
+      - label
+      - label_1
+      - name
+      - name_1
+      - name_2
+      - portland_group_title_field
+      - rendered_item
+      - title
+      - title_1
+      - type
+      - type_1
+      - type_2
+    title: true
+    alt: true
+    tags:
+      b: 2
+      em: 1
+      h1: 5
+      h2: 3
+      h3: 2
+      strong: 2
+      u: 1
+    weights:
+      preprocess_index: -15
+      preprocess_query: -15
   portland_group_title_field: {  }
   rendered_item: {  }
-  stemmer:
-    all_fields: true
-    fields:
-      - description
-      - label
-      - label_1
-      - name
-      - name_1
-      - rendered_item
-      - title
-      - title_1
-    exceptions:
-      mexican: mexic
-      texan: texa
-    weights:
-      preprocess_index: 0
-      preprocess_query: 0
-  stopwords:
-    all_fields: true
-    fields:
-      - description
-      - label
-      - label_1
-      - name
-      - name_1
-      - rendered_item
-      - title
-      - title_1
-    stopwords:
-      - a
-      - an
-      - and
-      - are
-      - as
-      - at
-      - be
-      - but
-      - by
-      - for
-      - if
-      - in
-      - into
-      - is
-      - it
-      - 'no'
-      - not
-      - of
-      - 'on'
-      - or
-      - s
-      - such
-      - t
-      - that
-      - the
-      - their
-      - then
-      - there
-      - these
-      - they
-      - this
-      - to
-      - was
-      - will
-      - with
-    weights:
-      preprocess_index: -5
-      preprocess_query: -2
-  tokenizer:
-    all_fields: true
-    fields:
-      - description
-      - label
-      - label_1
-      - name
-      - name_1
-      - rendered_item
-      - title
-      - title_1
-    spaces: ''
-    overlap_cjk: 1
-    minimum_word_size: '3'
-    weights:
-      preprocess_index: -6
-      preprocess_query: -6
   type_boost:
     boosts:
       'entity:group':
@@ -352,15 +302,12 @@ processor_settings:
       'entity:node':
         datasource_boost: !!float 1
         bundle_boosts:
-          alert: !!float 0
-          building: !!float 0
           city_service: !!float 8
           event: !!float 1
           guide: !!float 8
           information: !!float 0
           news: !!float 1
-          notification: !!float 0
-          service_location: !!float 1
+          page: !!float 0
       'entity:taxonomy_term':
         datasource_boost: !!float 3
         bundle_boosts:
