--- a/web/sites/default/config/search_api.server.searchstax.yml
+++ b/web/sites/default/config/search_api.server.searchstax.yml
@@ -12,10 +12,10 @@ backend_config:
   connector: basic_auth
   connector_config:
     scheme: https
-    host: null
+    host: 'null'
     port: '443'
     path: /solr
-    core: null
+    core: ''
     timeout: 5
     index_timeout: 5
     optimize_timeout: 10
