--- a/.lando.yml
+++ b/.lando.yml
@@ -26,7 +26,7 @@ services:
     portforward: true
     core: index
     config:
-      conf: web/modules/contrib/search_api_solr/solr-conf/6.x
+      conf: private/solr-conf
 drush: composer
 tooling:
   drush:
